--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "nuxt": "^4.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.563.0",
+    "nuxt": "^4.3.1",
+    "ogl": "^1.0.11",
+    "radix-vue": "^1.9.17",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^5.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^7.2.0",
+    "@antfu/eslint-config": "^7.3.0",
     "@nuxt/image": "^2.0.0",
     "@nuxtjs/sitemap": "^7.6.0",
-    "eslint": "^9.39.2"
+    "eslint": "^10.0.0"
   }
 }
